<resources>
    <string name="app_name">Bookshop</string>

    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_cart">My cart</string>
    <string name="profile">My profile</string>
    <string name="my_orders">My Orders</string>

    <string name="price_text_rec">$%1$d.00</string>
    <string name="rec_price">Price: $%1$d.00</string>

    <string name="author_by">by %1$s</string>
</resources>