<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.unipi.p18240.bookshop.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.unipi.p18240.bookshop.ui.category.CategoryFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_category"/>

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.unipi.p18240.bookshop.MyCartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_my_cart"/>

</navigation>